--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </section>
         <section id="redes-sociais">            
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Home"></a>
+            <a href="https://www.youtube.com/watch?v=rXxFa8kU9bI" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
 
         </section>        
     </main>
