--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main>
-        <section id="telefone">
-            <iframe src="home.html" frameborder="0"
+        <section id="telefone">?khf\
+            }i
              name="tela" id="tela" ></iframe>
 
         </section>
